Re-sprite programs icons (#601)

--- a/Resources/Prototypes/Entities/Objects/Devices/cartridges.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/cartridges.yml
@@ -97,8 +97,8 @@
   - type: Cartridge
     programName: notekeeper-program-name
     icon:
-      sprite:  Objects/Misc/books.rsi
-      state: book_icon
+      sprite: _CorvaxGoob/Interface/Misc/program_icons.rsi # Corvax-Goob-RespriteProgramsIcons
+      state: notes
   - type: NotekeeperCartridge
 
 
@@ -170,8 +170,8 @@
     - type: Cartridge
       programName: net-probe-program-name
       icon:
-        sprite: Structures/Machines/server.rsi
-        state: server
+        sprite: _CorvaxGoob/Interface/Misc/program_icons.rsi # Corvax-Goob-RespriteProgramsIcons
+        state: netprobe
     - type: NetProbeCartridge
 
 - type: entity
@@ -191,8 +191,8 @@
     - type: Cartridge
       programName: log-probe-program-name
       icon:
-        sprite: Structures/Doors/Airlocks/Standard/security.rsi
-        state: closed
+        sprite: _CorvaxGoob/Interface/Misc/program_icons.rsi # Corvax-Goob-RespriteProgramsIcons
+        state: logprobe
     - type: LogProbeCartridge
     - type: GuideHelp
       guides:
@@ -215,8 +215,8 @@
   - type: Cartridge
     programName: wanted-list-program-name
     icon:
-      sprite: Objects/Misc/books.rsi
-      state: icon_magnifier
+      sprite: _CorvaxGoob/Interface/Misc/program_icons.rsi # Corvax-Goob-RespriteProgramsIcons
+      state: watchdog
   - type: WantedListCartridge
   - type: StealTarget
     stealGroup: WantedListCartridge
@@ -236,8 +236,8 @@
     - type: Cartridge
       programName: med-tek-program-name
       icon:
-        sprite: Objects/Specific/Medical/healthanalyzer.rsi
-        state: icon
+        sprite: _CorvaxGoob/Interface/Misc/program_icons.rsi # Corvax-Goob-RespriteProgramsIcons
+        state: medtek
     - type: MedTekCartridge
 
 - type: entity
@@ -255,6 +255,6 @@
     - type: Cartridge
       programName: astro-nav-program-name
       icon:
-        sprite: Objects/Devices/gps.rsi
-        state: icon
+        sprite: _CorvaxGoob/Interface/Misc/program_icons.rsi # Corvax-Goob-RespriteProgramsIcons
+        state: astronav
     - type: AstroNavCartridge
