--- a/Resources/Prototypes/_CorvaxGoob/Maps/Stations/corvax_tushkan.yml
+++ b/Resources/Prototypes/_CorvaxGoob/Maps/Stations/corvax_tushkan.yml
@@ -26,6 +26,7 @@
             # cargo
             Quartermaster: [ 1, 1 ]
             SalvageSpecialist: [ 2, 2 ]
+            ShaftMiner: [ 2, 2 ]
             CargoTechnician: [ 2, 2 ]
             # engineering
             ChiefEngineer: [ 1, 1 ]
