Rename pipe to gas pipe (#613)

--- a/Resources/Prototypes/Recipes/Construction/utilities.yml
+++ b/Resources/Prototypes/Recipes/Construction/utilities.yml
@@ -402,6 +402,7 @@
 
 - type: construction
   id: GasPipeStraight
+  name: construction-recipe-gas-pipe-straight
   graph: GasPipe
   startNode: start
   targetNode: straight
