--- a/Resources/Prototypes/_CorvaxGoob/Maps/Stations/corvax_glacier.yml
+++ b/Resources/Prototypes/_CorvaxGoob/Maps/Stations/corvax_glacier.yml
@@ -24,8 +24,9 @@
             NanotrasenRepresentative: [ 1, 1 ]
             # cargo
             Quartermaster: [ 1, 1 ]
-            SalvageSpecialist: [ 4, 4 ]
+            SalvageSpecialist: [ 2, 2 ]
             CargoTechnician: [ 4, 5 ]
+            ShaftMiner: [ 2, 2 ]            
             # engineering
             ChiefEngineer: [ 1, 1 ]
             AtmosphericTechnician: [ 3, 3 ]
